--- a/index.html
+++ b/index.html
@@ -1,11 +1,146 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MetaCoin | Inspired by Meta AI</title>
-    <link rel="stylesheet" href="styles-updated.css">
+    <style>
+        /* General Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Montserrat', sans-serif;
+        }
+
+        body {
+            background: linear-gradient(120deg, #001A33, #4B0082);
+            color: #ffffff;
+            line-height: 1.6;
+            overflow-x: hidden;
+            min-height: 100vh;
+        }
+
+        .container {
+            width: 90%;
+            margin: 0 auto;
+            max-width: 1200px;
+        }
+
+        /* Header */
+        header {
+            background: linear-gradient(90deg, #4B0082, #8A2BE2, #00FFFF);
+            padding: 20px 0;
+            text-align: center;
+            position: sticky;
+            top: 0;
+            z-index: 10;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+        }
+
+        header h1 {
+            font-size: 2.5rem; /* Reduced font size */
+            font-weight: bold;
+            text-shadow: 3px 3px 10px #00FFFF;
+            animation: glow 2s ease-in-out infinite alternate;
+        }
+
+        @keyframes glow {
+            from {
+                text-shadow: 0 0 10px #8A2BE2, 0 0 20px #00FFFF;
+            }
+            to {
+                text-shadow: 0 0 20px #8A2BE2, 0 0 40px #00FFFF;
+            }
+        }
+
+        header p {
+            font-size: 1.2rem;
+            margin-top: 10px;
+        }
+
+        header nav a {
+            text-decoration: none;
+            color: #ffffff;
+            margin: 0 10px;
+            font-weight: bold;
+            font-size: 1rem;
+            padding: 8px 15px;
+            border-radius: 5px;
+            background: rgba(255, 255, 255, 0.1);
+            transition: all 0.3s ease;
+        }
+
+        header nav a:hover {
+            background: #8A2BE2;
+            box-shadow: 0px 4px 8px rgba(138, 43, 226, 0.5);
+            transform: scale(1.1);
+        }
+
+        /* Sections */
+        .section {
+            padding: 40px 20px;
+            text-align: center;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+            animation: fade-in 1s ease-in;
+        }
+
+        @keyframes fade-in {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .section:nth-child(even) {
+            background: linear-gradient(120deg, #4B0082, #001A33);
+        }
+
+        .section h2 {
+            font-size: 1.8rem; /* Reduced font size */
+            color: #00FFFF;
+            margin-bottom: 20px;
+            text-shadow: 2px 2px 8px #8A2BE2;
+        }
+
+        .section ul {
+            list-style: none;
+            margin-top: 10px;
+        }
+
+        .section ul li {
+            margin: 10px 0;
+        }
+
+        .section ul li a {
+            text-decoration: none;
+            color: #ffffff;
+            padding: 10px 20px;
+            border-radius: 15px;
+            background: linear-gradient(90deg, #8A2BE2, #00FFFF);
+            transition: all 0.3s ease;
+            box-shadow: 0px 4px 6px rgba(138, 43, 226, 0.5);
+        }
+
+        .section ul li a:hover {
+            transform: translateY(-5px);
+            box-shadow: 0px 6px 12px rgba(0, 255, 255, 0.7);
+        }
+
+        /* Footer */
+        footer {
+            background: linear-gradient(90deg, #4B0082, #00FFFF);
+            text-align: center;
+            padding: 20px 0;
+            color: #ffffff;
+            font-size: 1rem;
+            box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.2);
+        }
+    </style>
 </head>
 <body>
     <header>
